ipc/ipdl/test/ipdl/error/managerNoDtor.ipdl
include protocol managedNoDtor;

protocol managerNoDtor {
    manages managedNoDtor;

parent:
    async managedNoDtor();
    // error: no ctor defined
};
